template mini-wp

--- a/index.html
+++ b/index.html
@@ -122,10 +122,13 @@
 
 
         <div id="sidebar-wrapper" class="col blog-main  ">
-            <div class="col-lg-12">
-                <div class="searching">
-                    <input type="text" placeholder="Search..">
-                </div>
+               
+            <div id="" class="col-lg-12">
+                <form class="form-inline">
+                    <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search"
+                        aria-label="Search">
+                    <i class="fas fa-search" aria-hidden="true"></i>
+                </form>
             </div>
 
             <div class="col-lg-11">
@@ -146,10 +149,23 @@
 
                 <!-- artikel start -->
                 <div id="artikel" class="container-artikel col-lg-12 border">
-                    <div class="blog-post">
+                    <div class="blog-post col-lg-12 border">
                         <h2>Sample blog post</h2>
                         <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
 
+                        <p>This blog post shows a few different types of content that's supported and styled with
+                            Bootstrap.
+                            Basic typography, images, and code are all supported.</p>
+                        <hr>
+                        <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur
+                            ridiculus mus.
+                            Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere
+                            consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
+                    </div>
+                    <div class="blog-post col-lg-12 border">
+                        <h2>Sample blog post</h2>
+                        <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
+    
                         <p>This blog post shows a few different types of content that's supported and styled with
                             Bootstrap.
                             Basic typography, images, and code are all supported.</p>
